@@ -1,3 +1,6 @@
+2003-07-01
+	* report CPU usage in stats
+	 
 2003-06-30
 	* version 1.1.6
 	* fix a number of obscure bugs
